--- a/app/css/style.css
+++ b/app/css/style.css
@@ -33,7 +33,7 @@ a {
     position: relative;
 }
 .header h1 {
-    font-size: var(--font-size-xxlarge);
+    font-size: var(--font-size-xxxlarge);
     color: #895129;
     margin: 0;
 }
@@ -41,7 +41,9 @@ a {
     font-size: var(--font-size-xxlarge);
     color: var(--main);
     margin: 0;
+
 }
+
 nav {
     display: flex;
     justify-content: center;
@@ -54,17 +56,10 @@ nav {
     }
 }
 
-p{
-    font-size: var(--font-size);
-    color: var(--main);
-    margin: 10px;
-    font-family: var(--font-family);
-}
 
 .hide-menu {
     display: none;
 }
-
 
 .burger {
     display: none;
@@ -118,6 +113,42 @@ body {
     padding: 0;
     color: #333;
     line-height: 1.6;
+}
+h2 {
+    font-size: var(--font-size-xxxlarge);
+    color: var(--main);
+    text-align: center;
+    margin: 20px 0;
+}
+
+h3 {
+    font-size: var(--font-size-xxlarge);
+    color: var(--main);
+    text-align: center;
+    margin: 20px 0;
+}
+.section{
+    border: solid 3px;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 10px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+p{
+    font-size: var(--font-size);
+    color: var(--main);
+    margin: 10px;
+    font-family: var(--font-family);
 }
 /* SECTIONS*/
 
@@ -268,6 +299,7 @@ fieldset.form-group {
     cursor: pointer;
     color: var(--main);
 }
+
 /* Base Styles */
 * {
     margin: 0;
@@ -281,20 +313,26 @@ fieldset.form-group {
     margin: 0 auto;
     padding: 20px;
 }
+.add-to-card{
+    display: flex;
+    justify-content: center;
+
+    button{
+        background-color: #4caf50;
+        color: white;
+        border-radius: 10px;
+        border: solid 2px;
+        margin: 5px;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+    }
+}
 
 header {
     text-align: center;
     margin-bottom: 30px;
     padding: 20px 0;
     border-bottom: 1px solid #ddd;
-}
-
-footer {
-    margin-top: 50px;
-    text-align: center;
-    padding: 20px 0;
-    border-top: 1px solid #ddd;
-    color: #7f8c8d;
 }
 
 /* Button Styles */
@@ -340,6 +378,15 @@ footer {
         border-radius: 12px;
         padding: 5px;
     }
+}
+
+.price p{
+    font-size: var(--font-size-large);
+    font-family: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
 }
 
 
@@ -449,19 +496,6 @@ label {
     display: none;
 }
 
-h2 {
-    font-size: var(--font-size-xxxlarge);
-    color: var(--main);
-    text-align: center;
-    margin: 20px 0;
-}
-
-h3 {
-    font-size: var(--font-size-xxlarge);
-    color: var(--main);
-    text-align: center;
-    margin: 20px 0;
-}
 
 .span {
     font-size: var(--font-size-xxlarge);
@@ -551,45 +585,44 @@ input:invalid {
     display: block;
 }
 
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s, box-shadow 0.3s;
+.youtube{
+    border: solid 3px;
+    margin-bottom: 5px;
+    border-radius: 3px;
 }
-
-.phone-link {
-    text-decoration: none;
-    color: var(--main);
-
-    .phone-link:hover {
-        opacity: 0.3;
-    }
-}
-
-
 .location{
     padding: 10px;
-
+    border: solid 3px;
+    border-radius: 5px;
     .location p {
         margin-bottom: 10px;
         font-family: var(--font-family);
     }
 }
 
-.footer {
+footer {
+    margin-top: 50px;
+    text-align: center;
+    padding: 20px 0;
+    border-top: 1px solid #ddd;
+    color: #7f8c8d;
     background-color: var(--secondary);
     color: var(--main);
     text-align: center;
     padding: 5px;
     margin: 10px;
     margin-bottom: 50px;
+
+    .phone-link {
+        text-decoration: none;
+        color: var(--main);
     
-    .footer p {
+        .phone-link:hover {
+            opacity: 0.3;
+        }
+    }
+
+    p{
         margin-bottom: 10px;
     }
 }
