--- a/app/css/book.css
+++ b/app/css/book.css
@@ -217,3 +217,10 @@
     cursor: not-allowed;
     opacity: 0.6;
 }
+
+.error-message {
+    color: #ff4d4d;
+    font-size: 0.8rem;
+    margin-top: 5px;
+    display: block;
+}
